@@ -1,3 +1,7 @@
+2011-09-04  Jan Hubicka  <jh@suse.cz>
+
+	* gcc.c-torture/compile/20110902.c: new testcase.
+
 2011-09-04  Jason Merrill  <jason@redhat.com>
 
 	PR c++/49267
