@@ -1,3 +1,8 @@
+2011-09-04  Jan Hubicka  <jh@suse.cz>
+
+	* ipa-inline-analysis.c (set_cond_stmt_execution_predicate): Check that
+	parameter is SSA name.
+
 2011-09-04  Richard Guenther  <rguenther@suse.de>
 
 	Revert
